--- a/240517/css/detail.css
+++ b/240517/css/detail.css
@@ -297,6 +297,7 @@ header.none{
 }
 .set-product .set li{
   margin-right: 25px;
+  white-space: nowrap;
 }
 .set-product .set li img{
   margin-top: 5px;
@@ -369,7 +370,7 @@ header.none{
   font-size: 1.5rem;
   
 }
-/* white-space: nowrap; */
+
 
 /********* footer **********/
 footer{
@@ -384,8 +385,8 @@ footer p{
 }
 
 
-@media (max-width : 450px){
-  body{
+@media (max-width : 500px){
+  body {
     overflow-x: hidden;
   }
 
@@ -523,6 +524,7 @@ footer p{
   .add-color-into-txt h3{
     font-size: var(--font-mobile-lg);
     margin-bottom: 10px;
+    font-family: var(--font-m-en);
   }
   .add-color-into-txt p{
     font-size: var(--font-mobile-md);
@@ -549,58 +551,125 @@ footer p{
   .add-color-into-txt .super-hard p{
     width: 150px;
   }
-
-
-
-  /* .add-color-into{
-    margin: 300px 500px 500px 500px;
-    position: relative;
-    min-width: 1000px;
-  }
-  .add-color-into .add-color-img-btn .add-color-img-box .add-color-img{
-    display: flex;
-    width: 400%;
-    position: relative;
-  }
-  .add-color-into .add-color-img-btn .add-color-img-box .add-color-img li{
-    width: 25%;
-  }
-  .add-color-into .add-color-img-btn .add-color-img-box .add-color-img img{
-    width: 400px;
-  }
-  .add-color-img-box{
-    width: 400px;
-    overflow: hidden;
-  }
-  .btn-group{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    bottom: -40px;
+  .add-color-into-txt .c-curve{
+    top: 800px;
     left: 20px;
-    border-radius: 25px;
-    width: 100px;
-    height: 30px;
-    
-    background-color: #F4F5F6;
   }
-  
-  .btn-group li{
-    text-indent: -9999px;
-    background-color: #D9D9D9;
-    width: 10px; height: 10px;
-    margin: 3px;
-    border-radius: 50%;
-    cursor: pointer;
+  .add-color-into-txt .c-curve p{
+    width: 210px;
   }
-  .btn-group li:hover{
-    background-color: #000;
-  } */
-  
+  .add-color-into-txt .way{
+    bottom: -100px;
+    right: 50px;
+  }
+  .add-color-into-txt .way p{
+    width: 260px;
+  }
+  .add-color-into-txt h2{
+    font-size: var(--font-mobile-lg);
+    font-family: var(--font-m-ko);
+    right: 50%;
+    transform: translateX(40%);
+    bottom: -220px;
+  }
+  .home{
+    width: 1000px;
+    right: 0;
+    left: auto;
+  }
   /********** set-product ***********/
   .set-product{
-    min-width: 500px;
+    min-width: 450px;
+    margin-top: 280px;
   }
+  .set-product .set{
+    height: 55px;
+    min-width: 450px;
+  }
+  .set-product .set li img{
+    width: 20px;
+    margin: 0;
+  }
+  .set-product .set li{
+    font-size: var(--font-mobile-lg);
+  }
+  .set-product  h3{
+    margin-top: 50px;
+    font-size: var(--font-mobile-lg);
+  }
+  .set-menu{
+    flex-direction: column;
+  } 
+  .set-menu .set-img1{
+    width: 300px;
+    height: 150px;
+    border-radius: 20px;
+  }
+  .set-menu .img1{
+    background-size: 50%;
+  }
+
+  /* .set-menu{
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
+  }
+  
+  .set-menu .set-img1{
+    background-color: var(--color-point-yellow);
+    width: 600px;
+    height: 400px;
+    border-radius: 43px;
+    position: relative;
+    margin-right: 30px;
+  }
+  .set-menu .img1{
+    background: url(../images/detail-img/상세페이지_3.png) no-repeat;
+    width: 500px;
+    height: 500px;
+    text-indent: -9999px;
+    position: absolute;
+    top: -110px;
+    margin-left: 30px;
+    transform: rotate(10deg);
+    transition: 0.3s;
+  }
+  .set-menu .set-img1:hover .img1{
+    transform: none;
+  }
+  .set-menu .set-img2{
+    background-color: var(--color-point-pink);
+    width: 600px;
+    height: 400px;
+    border-radius: 43px;
+    position: relative;
+  }
+  .set-img1 p{
+    position: absolute;
+    bottom: -45px;
+    left: -5px;
+    font-size: 1.5rem;
+  }
+  .set-menu .img2{
+    background: url(../images/detail-img/상세페이지_4.png) no-repeat;
+    transform: rotate(15deg);
+    width: 500px;
+    height: 500px;
+    text-indent: -9999px;
+    position: absolute;
+    top: -100px;
+    margin-left: 50px;
+    transition: 0.3s;
+  }
+  .set-menu .set-img2:hover .img2{
+    transform: none;
+  }
+  .set-img2 p{
+    position: absolute;
+    bottom: -45px;
+    left: -5px;
+    font-size: 1.5rem;
+    
+  } */
   /********* footer **********/
 }
