--- a/240517/css/detail.css
+++ b/240517/css/detail.css
@@ -280,12 +280,7 @@ header.none{
   /* display: none; */
 }
 
-
-/********** set-product ***********/
-.set-product {
-  min-width: 1000px;
-}
-.set-product .set{
+.set{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -295,14 +290,20 @@ header.none{
   font-weight: 800;
   min-width: 1000px;
 }
-.set-product .set li{
+.set li{
   margin-right: 25px;
   white-space: nowrap;
 }
-.set-product .set li img{
+.set li img{
   margin-top: 5px;
   margin-right: 3px;
 }
+
+/********** set-product ***********/
+.set-product {
+  min-width: 1000px;
+}
+ 
 .set-product h3{
   text-align: center;
   font-size: 40px;
@@ -387,15 +388,17 @@ footer p{
 
 @media (max-width : 450px){
   body {
-    overflow-x: hidden;
-    min-width: 450px;
+    margin: 0 auto;
   }
-
+  main{
+    overflow-x: hidden;
+  }
 
   /****** header ********/
   header{
+    min-width: 400px;
     height: 70px;
-    width: 100%;
+    /* overflow-x: hidden; */
   }
   header img{
     width: 100px;
@@ -415,31 +418,38 @@ footer p{
 /******** home-pliates *******/
 .home-pliates{
   min-width: 450px;
-  margin: 10px;
+  /* margin: 10px; */
+  width: 100%;
+  margin: 0;
+  padding: 10px;
   position: relative;
   height: 900px;
+  /* overflow-x: hidden; */
 }
 .home-pliates h1{
   font-size: var(--font-mobile-lg);
   line-height: 20px;
   position: absolute;
   top: 130px;
+  margin-left: 10px;
   width: 150px;
 }
 .home-pliates .add{
   font-size: var(--font-mobile-lg);
   position: absolute;
-  top: 860px;
+  top: 870px;
+  margin-left: 10px;
 }
 .home-pliates .add svg{
   width: 20px;
   height: 20px;
+  margin-top: 10px;
 }
 
 .home-pliates .back-btn{
   position: absolute;
   top: 80px;
-  left: -10px;
+  left: 5px;
   font-size: var(--font-mobile-sm);
   width: 60px;
   height: 20px;
@@ -454,7 +464,7 @@ footer p{
   width: 300px;
   height: 300px;
   bottom: -330px;
-  right: -340px;
+  right: -370px;
 }
 .detail-img p{
   width: 400px;
@@ -464,8 +474,9 @@ footer p{
 }
 .home-pliates .review-txt-box{
   position: absolute;
-  top: 740px;
+  top: 750px;
   width: 250px;
+  margin-left: 10px;
   font-size: var(--font-mobile-md);
 }
 .home-pliates .review-txt-box p{
@@ -477,6 +488,7 @@ footer p{
   border-radius: 20px;
   position: absolute;
   top: 200px;
+  margin-left: 10px;
 }
 .home-pliates .review strong{
   font-size: var(--font-mobile-lg);
@@ -485,16 +497,19 @@ footer p{
   font-size: var(--font-mobile-sm);
   margin-left: 20px;
 }
+.home-pliates .review li:nth-child(1){
+  margin-left: 0;
+}
 .home-pliates .review li:nth-child(1) strong::after, .home-pliates .review li:nth-child(2) strong::after{
   content: "";
   height: 20px;
   top: 20px;
 }
 .home-pliates .review li:nth-child(1) strong::after{
-  left: 105px;
+  left: 100px;
 }
 .home-pliates .review li:nth-child(2) strong::after{
-  right: 115px;
+  right: 125px;
 }
 .home-pliates .buy{
   width: 130px;
@@ -515,13 +530,15 @@ footer p{
   /********* add-color-into ***********/
   .add-color-into{
     min-width:450px;
-    margin: 10px;
+    margin: 0;
+    padding: 10px;
     height: 900px;
   }
   /********** add-color-into-txt ***********/
   .add-color-into-txt{
     min-width: 450px;
-    margin: 10px;
+    margin: 0;
+    padding: 10px;
   }
   .add-color-into-txt h3{
     font-size: var(--font-mobile-lg);
@@ -534,13 +551,13 @@ footer p{
   }
   .add-color-into .add-color-img-btn .add-color-img-box .add-color-img img{
     width: 350px;
-    margin: 60px 25px 0 25px;
+    margin: 80px 25px 0 25px;
   }
   .btn-group{
-    bottom: 320px;
+    bottom: 290px;
   }
   .add-color-into-txt .easy{
-    top: 620px;
+    top: 640px;
     left: 20px;
   }
   .add-color-into-txt .easy p{
@@ -581,25 +598,32 @@ footer p{
     top: 550px;
     height: 0;
   }
-  /********** set-product ***********/
-  .set-product{
+  .set{
+    height: 55px;
     min-width: 450px;
     margin-top: 300px;
   }
-  .set-product .set{
-    height: 55px;
-    min-width: 450px;
-  }
-  .set-product .set li img{
+  .set li img{
     width: 20px;
     margin: 0;
+    /* overflow-x: hidden; */
   }
-  .set-product .set li{
+  .set li{
     font-size: var(--font-mobile-lg);
+    margin-right: 5px;
   }
-  .set-product .set li:last-child{
+  .set li:last-child{
     display: none;
   }
+  /********** set-product ***********/
+  .set-product{
+    min-width: 450px;
+    margin-top: 20px;
+    overflow: hidden;
+    z-index: -9999;
+    /* background-color: #ddd; */
+  }
+
   .set-product  h3{
     margin: 40px auto 0;
     text-align: center;
@@ -643,27 +667,23 @@ footer p{
   footer{
     margin: 0;
     position: relative;
+    /* overflow-x: hidden; */
+    /* background-color: #ddd; */
+    height: 100px;
   }
   footer .footer-img img{
     /* margin: 0 0 20px 0; */
     position: absolute;
-    left: 20px;
+    top: 35px;
+    left: 15px;
+    width: 100px;
   }
   footer p{
     margin: 0;
     font-size: var(--font-mobile-sm);
-    right: 50x;
-    top: 18px;
+    right: 20px;
+    top: 40px;
   }
+
 }
 
-/* footer{
-  margin-top: 200px;
-}
-footer .footer-img{
-  margin: 40px;
-}
-footer p{
-  position: absolute;
-  right: 40px;
-} */
